cabal-version:      2.4
name:               evncr
version:            0.1.0.0
synopsis:           Read STDIN in the voice of EVAN DOORBELL.
description:        evncr reads the standard input in the voice of EVAN
                    DOORBELL.
bug-reports:        http://github.com/varikvalefor/evncr/issues
license:            BSD-3-Clause
author:             Varik Valefor
maintainer:         varikvalefor@aol.com
copyright:          (C) Varik Valefor 2021.

executable evncr
  main-is: evncr.hs
  other-modules: Config
  build-depends:
    base ^>=4.14.1.0,
    process
  hs-source-dirs: app
  default-language: Haskell2010
